--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -39,6 +39,7 @@
 
             />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_marginTop="20dp"
@@ -46,7 +47,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:text="TYPE:"
+            android:text="INCLUDE:"
             android:layout_margin="5dp"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
@@ -56,17 +57,20 @@
             />
 
 
-        <Spinner
-            android:id="@+id/spinner_type"
-            android:layout_height="match_parent"
+        <EditText
+            android:id="@+id/include"
             android:layout_width="0dp"
             android:layout_weight="2.5"
+            android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
-            android:spinnerMode="dropdown"/>
+            android:hint="Enter with comma"
+            android:inputType="textCapWords"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
 
-
-
+            />
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_marginTop="20dp"
@@ -74,7 +78,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:text="CUISINE:"
+            android:text="EXCLUDE:"
             android:layout_margin="5dp"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
@@ -84,18 +88,19 @@
             />
 
 
-        <Spinner
-            android:id="@+id/spinner_cuisine"
-            android:layout_height="match_parent"
+        <EditText
+            android:id="@+id/exclude"
             android:layout_width="0dp"
             android:layout_weight="2.5"
+            android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
-            android:spinnerMode="dropdown"/>
+            android:hint="Enter with comma"
+            android:inputType="textCapWords"
+            android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
 
-
-
+            />
     </LinearLayout>
-
 
     <Button
         android:id="@+id/search"
