--- a/app/src/main/res/layout/card_view_row.xml
+++ b/app/src/main/res/layout/card_view_row.xml
@@ -7,43 +7,55 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:layout_margin="5dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="15dp"
         card_view:cardCornerRadius="7dp"
         card_view:contentPadding="10dp">
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
             android:orientation="vertical"
-            android:layout_height="fill_parent">
+            android:layout_gravity="center">
 
             <ImageView
-                android:layout_width="wrap_content"
                 android:id="@+id/image"
-                android:layout_height="0dp"
-                android:layout_weight="1.5"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
                 android:src="@mipmap/download"
                 />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_weight="1"
-                android:background="#90A4AE"
+                android:layout_height="75dp"
                 android:orientation="vertical"
-                android:layout_height="0dp">
+                android:background="#689F38">
             <TextView
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1.5"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
                 android:id="@+id/title"
                 android:layout_width="match_parent"
-                android:textColor="#000000"
+                android:textStyle="bold"
                />
             <TextView
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:paddingLeft="10dp"
+                android:textColor="#FFFFFF"
                 android:id="@+id/views"
                 android:layout_width="match_parent"
-                android:textColor="#000000"
+                android:textSize="16sp"
                 />
             </LinearLayout>
 
