--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:background="#FFF8E1"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activities.MainActivity">
 
 
 <TextView
@@ -35,7 +35,7 @@
             android:textSize="20sp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:gravity="center_horizontal"
+            android:layout_gravity="center_horizontal"
             android:text="@string/share_info"/>
     <TextView
         android:layout_width="wrap_content"
@@ -64,15 +64,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="MESSENGER"
         android:textStyle="bold"
-        android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
         android:textAlignment="center"
         android:padding="5dp"
-        android:textColor="#000000"
+        android:textColor="#FFFFFF"
         android:textSize="15sp"
         />
     </LinearLayout>
@@ -90,12 +89,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="GMAIL"
             android:textStyle="bold"
-            android:layout_marginLeft="5dp"
             android:textAlignment="center"
             android:padding="5dp"
             android:textColor="#000000"
