--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:src="@mipmap/download"/>
+            android:src="@mipmap/icon"/>
         <TextView
             android:layout_marginTop="25dp"
             android:layout_width="wrap_content"
