--- a/app/src/main/res/layout/card_view_row.xml
+++ b/app/src/main/res/layout/card_view_row.xml
@@ -29,7 +29,7 @@
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter"
-                android:src="@mipmap/download"
+                android:src="@mipmap/icon"
                 />
             <LinearLayout
                 android:layout_width="match_parent"
