--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="#FFF8E1"
+    android:id="@+id/main_field"
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
